# deew

./: .gitignore  CNAME  LICENSE  README.hu.md  README.md  README_hu.md  bitrates.py  build.sh  changelog.md  config.toml  config.toml.example  deew.py  deew2.py  deew2_entry.py  index.html  logos.py  messages.py  pyproject.toml  requirements.txt  setup.ps1  terminalizer_config.yml  version.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md
.github/workflows/: build.yaml
cli/: __init__.py  parser.py  utils.py
deew/: __init__.py  __main__.py  _version.py  bitrates.py  deew.py  messages.py  simplens.py  xml_base.py
deew/encode/: __init__.py
deew/payloads/: __init__.py
deew/utils/: __init__.py
deew/xml/: __init__.py  utils.py  xml.py
deew2/audio_encoders/: base.py
deew2/audio_encoders/dee/: base.py  bitrates.py  dd.py  ddp.py
deew2/audio_processors/: dee.py  ffmpeg.py
deew2/dee/: base.py  dd.py  ddp.py  delay.py
deew2/enums/: __init__.py  dd.py  ddp.py  shared.py
deew2/exceptions/: __init__.py
deew2/info/: __init__.py
deew2/loggers/: console.py
deew2/payloads/: dd.py  ddp.py  shared.py
deew2/track_info/: audio_track_info.py  mediainfo.py
deew2/utils/: _version.py  dependencies.py  exit.py  file_parser.py  utils.py
deew2cli/: __init__.py  utils.py
dev_scripts/: doom9.py  doom9_template.txt  examples_en.txt  generate_readme.py  pre_commit.py
dev_scripts/doom9/: doom9.py
dev_scripts/h/: h.py
dev_scripts/post/: doom9.py  doom9_template.bb  telegram.py
dev_scripts/readme/: description_en.md  description_en.txt  description_hu.md  examples_en.md  examples_hu.md  header.md  help.txt  readme_template_en.md  readme_template_hu.md
dev_scripts/telegram/: telegram.py
index_files/: style.css
logo/: logo-side-by-side.ai  logo.ai
notification/: doom9.py  telegram.py
site/: index.html
site/index_files/: style.css
xml/: ddp.xml  thd.xml
(+4 files in other folders)
