[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deew"
version = "2.5.0"
readme = 'README.md'
description = "Dolby Encoding Engine Wrapper"
authors = ["pcroland <pcroland@protonmail.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7,<3.11"
importlib-metadata = {version = "^4.12.0", python = "<3.8"}
packaging = "^21.3"
platformdirs = "^2.5.2"
requests = "^2.28.1"
rich = "^12.5.1"
toml = "^0.10.2"
Unidecode = "^1.3.4"
xmltodict = "^0.13.0"

[tool.poetry.scripts]
deew = "deew.__main__:main"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.2"
