[tool.poetry]
name = "deew"
version = "3.0.1"
description = "Dolby Encoding Engine Wrapper"
authors = ["pcroland <pcroland@protonmail.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
packaging = "^23.1"
platformdirs = "^3.5.0"
requests = "^2.29.0"
rich = "^13.3.5"
toml = "^0.10.2"
Unidecode = "^1.3.6"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deew = "deew.__main__:main"
