[tool.poetry]
name = "deew"
version = "3.1.3"
description = "Dolby Encoding Engine Wrapper"
authors = ["pcroland <pcroland@protonmail.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
packaging = "^23.2"
platformdirs = "^4.1.0"
requests = "^2.31.0"
rich = "^13.7.0"
toml = "^0.10.2"
Unidecode = "^1.3.7"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"
isort = "^5.13.2"
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deew = "deew.__main__:main"
